--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="container-fluid">
                     <div class="header-menu-content">
                         <nav class="navbar navbar-expand-xl p-0">
-                            <a class="site-logo site-title" href="#0"><img src="assets/images/akc.png"
+                            <a class="site-logo site-title" href="index.html"><img src="assets/images/akc.png"
                                     alt="site-logo"></a>
                             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -59,11 +59,11 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav main-menu">
                                     <li>
-                                        <a href="#0">HOME</a>
+                                        <a href="index.html">HOME</a>
                                     </li>
-                                    <li><a href="#0">ABOUT US</a></li>
+                                    <li><a href="about.html">ABOUT US</a></li>
                                     <li>
-                                        <a href="#0">GALLERY</a>
+                                        <a href="gallery.html">GALLERY</a>
 
                                     </li>
                                     <li>
@@ -71,11 +71,11 @@
 
                                     </li>
                                     <li>
-                                        <a href="#0">REGISTER</a>
+                                        <a href="register.html">REGISTER</a>
 
                                     </li>
 
-                                    <li><a href="#0">CONTACT US</a></li>
+                                    <li><a href="contact.html">CONTACT US</a></li>
                                 </ul>
                                 <div class="header-right">
                                     <div class="header-action-area">
@@ -92,6 +92,7 @@
             </div>
         </div>
     </header>
+
 
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
