--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Start Feature
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <section class="feature-section feature-section-two feature-section--style pt-120 pb-100">
+    <section class="feature-section feature-section-two feature-section--style pt-120 pb-100 bg-f2f5f8">
 
         <div class="container">
             <div class="row justify-content-center">
@@ -268,87 +268,9 @@ Start Feature
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 End Feature
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Start Video
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <section class="video-section bg-overlay-red bg_img" data-background="assets/images/bg/bg-13.png">
-        <div class="section-logo-text">
-            <span class="title">SEE OUR VIDEO</span>
-        </div>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-xl-12 text-center">
-                    <div class="video-area">
-                        <div class="video-main">
-                            <div class="promo-video">
-                                <div class="waves-block">
-                                    <div class="waves wave-1"></div>
-                                    <div class="waves wave-2"></div>
-                                    <div class="waves wave-3"></div>
-                                </div>
-                            </div>
-                            <a class="video-icon" data-rel="lightcase:myCollection"
-                                href="https://www.youtube.com/embed/YDErI8Lphho">
-                                <i class="fas fa-play"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    End Video
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+ 
 
-
-    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Start Statistics
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <section class="statistics-section">
-        <div class="container">
-            <div class="statistics-area">
-                <div class="row mt-20-none mb-30-none">
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 mb-30">
-                        <div class="statistics-item">
-                            <div class="statistics-content">
-                                <div class="odo-area">
-                                    <h3 class="odo-title odometer" data-odometer-final="1025">0</h3>
-                                    <h3 class="title">+</h3>
-                                </div>
-                                <p>Complete Training</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 mb-30">
-                        <div class="statistics-item">
-                            <div class="statistics-content">
-                                <div class="odo-area">
-                                    <h3 class="odo-title odometer" data-odometer-final="478">0</h3>
-                                    <h3 class="title">+</h3>
-                                </div>
-                                <p>License Registration</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 mb-30">
-                        <div class="statistics-item">
-                            <div class="statistics-content">
-                                <div class="odo-area">
-                                    <h3 class="odo-title odometer" data-odometer-final="2500">0</h3>
-                                    <h3 class="title">+</h3>
-                                </div>
-                                <p>Students Admission</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    End Statistics
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+   
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Start About
