--- a/contact.html
+++ b/contact.html
@@ -46,59 +46,58 @@
 
 
 
-    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+   <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Start Header
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <header class="header-section header-section-two header-section-three">
-        <div class="header">
-            <div class="header-bottom-area">
-                <div class="container-fluid">
-                    <div class="header-menu-content">
-                        <nav class="navbar navbar-expand-xl p-0">
-                            <a class="site-logo site-title" href="#0"><img src="assets/images/akc.png"
-                                    alt="site-logo"></a>
-                            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
-                                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="fas fa-bars"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav main-menu">
-                                    <li>
-                                        <a href="#0">HOME</a>
-                                    </li>
-                                    <li><a href="#0">ABOUT US</a></li>
-                                    <li>
-                                        <a href="#0">GALLERY</a>
+<header class="header-section header-section-two header-section-three">
+    <div class="header">
+        <div class="header-bottom-area">
+            <div class="container-fluid">
+                <div class="header-menu-content">
+                    <nav class="navbar navbar-expand-xl p-0">
+                        <a class="site-logo site-title" href="index.html"><img src="assets/images/akc.png"
+                                alt="site-logo"></a>
+                        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="fas fa-bars"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav main-menu">
+                                <li>
+                                    <a href="index.html">HOME</a>
+                                </li>
+                                <li><a href="about.html">ABOUT US</a></li>
+                                <li>
+                                    <a href="gallery.html">GALLERY</a>
 
-                                    </li>
-                                    <li>
-                                        <a href="#0">SHEDULE</a>
+                                </li>
+                                <li>
+                                    <a href="#0">SHEDULE</a>
 
-                                    </li>
-                                    <li>
-                                        <a href="register.html">REGISTER</a>
+                                </li>
+                                <li>
+                                    <a href="register.html">REGISTER</a>
 
-                                    </li>
+                                </li>
 
-                                    <li><a href="contact.html">CONTACT US</a></li>
-                                </ul>
-                                <div class="header-right">
-                                    <div class="header-action-area">
-                                        <div class="header-action">
-                                            <a href="#0" class="btn--base">APPLY NOW <i
-                                                    class="fas fa-arrow-right ml-2"></i></a>
-                                        </div>
+                                <li><a href="contact.html">CONTACT US</a></li>
+                            </ul>
+                            <div class="header-right">
+                                <div class="header-action-area">
+                                    <div class="header-action">
+                                        <a href="#0" class="btn--base">APPLY NOW <i
+                                                class="fas fa-arrow-right ml-2"></i></a>
                                     </div>
                                 </div>
                             </div>
-                        </nav>
-                    </div>
+                        </div>
+                    </nav>
                 </div>
             </div>
         </div>
-    </header>
-
+    </div>
+</header>
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Start Banner
