meta tags updated

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AKC </title>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AKC Karate Group of Martial Arts - Empowering Excellence since 2013. Join us for top-tier traditional and modernized Shotokan Karate training in the UAE.">
+    <meta name="keywords" content="Karate Group, Martial Arts, Shotokan Karate, Chief Instructor, Black Belt, Empowerment, Excellence, Discipline, Coordination, Focus, Self-Esteem, Leadership, Self-Defense, UAE, World Shotokan Karate Federation, UAE Karate Federation, Fitness Goals, Professional Instructors, National Competitions, International Competitions">
+    <meta name="author" content="AKC Karate Group">
+    <title>AKC Karate Group of Martial Arts - Empowering Excellence since 2013</title>
 
     <link
         href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap"
