team members added

--- a/about.html
+++ b/about.html
@@ -6,9 +6,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AKC Karate Group of Martial Arts - Empowering Excellence since 2013. Join us for top-tier traditional and modernized Shotokan Karate training in the UAE.">
-    <meta name="keywords" content="Karate Group, Martial Arts, Shotokan Karate, Chief Instructor, Black Belt, Empowerment, Excellence, Discipline, Coordination, Focus, Self-Esteem, Leadership, Self-Defense, UAE, World Shotokan Karate Federation, UAE Karate Federation, Fitness Goals, Professional Instructors, National Competitions, International Competitions">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="AKC Karate Group of Martial Arts - Empowering Excellence since 2013. Join us for top-tier traditional and modernized Shotokan Karate training in the UAE.">
+    <meta name="keywords"
+        content="Karate Group, Martial Arts, Shotokan Karate, Chief Instructor, Black Belt, Empowerment, Excellence, Discipline, Coordination, Focus, Self-Esteem, Leadership, Self-Defense, UAE, World Shotokan Karate Federation, UAE Karate Federation, Fitness Goals, Professional Instructors, National Competitions, International Competitions">
     <meta name="author" content="AKC Karate Group">
     <title>AKC Karate Group of Martial Arts - Empowering Excellence since 2013</title>
 
@@ -79,7 +81,7 @@
                                         <a href="#0">SHEDULE</a>
 
                                     </li> -->
-                                      <li class="d-block d-lg-none">
+                                    <li class="d-block d-lg-none">
                                         <a href="register.html">REGISTER</a>
 
                                     </li>
@@ -207,8 +209,9 @@ Start Feature
                                     </div>
                                     <div class="feature-content">
                                         <h4 class="title"><span>01.</span> A comprehensive training program.</h4>
-                                        <p>Fight School has specialized in martial arts since 1986 and has one of the
-                                            most</p>
+                                        <p>Welcome to Asian Karate Club in Abu Dhabi, where we offer a complete training
+                                            program for all ages and skill levels. Our program covers everything from
+                                            basic moves to self-defense, guided by experienced instructors.</p>
                                     </div>
                                 </div>
                             </div>
@@ -221,8 +224,10 @@ Start Feature
                                     </div>
                                     <div class="feature-content">
                                         <h4 class="title"><span>02.</span> Teaching positive attitude.</h4>
-                                        <p>Fight School has specialized in martial arts since 1986 and has one of the
-                                            most</p>
+                                        <p>
+                                            At our club, we teach more than just karate. We nurture a positive mindset
+                                            that helps students tackle challenges in and out of the dojo, fostering
+                                            discipline and resilience.</p>
                                     </div>
                                 </div>
                             </div>
@@ -236,8 +241,9 @@ Start Feature
                                     <div class="feature-content">
                                         <h4 class="title"><span>03.</span> Building confidence in one's capabilities.
                                         </h4>
-                                        <p>Fight School has specialized in martial arts since 1986 and has one of the
-                                            most</p>
+                                        <p>Our focus goes beyond techniques – we help students grow their
+                                            self-confidence. Progressing in karate, mastering skills, and overcoming
+                                            obstacles all contribute to building strong self-esteem.</p>
                                     </div>
                                 </div>
                             </div>
@@ -250,8 +256,9 @@ Start Feature
                                     </div>
                                     <div class="feature-content">
                                         <h4 class="title"><span>04.</span> Creating awareness.</h4>
-                                        <p>Fight School has specialized in martial arts since 1986 and has one of the
-                                            most</p>
+                                        <p>Join us to not only learn karate but also to enhance your awareness of your
+                                            body and surroundings. Our training equips you with practical self-defense
+                                            skills for real-life situations.</p>
                                     </div>
                                 </div>
                             </div>
@@ -404,11 +411,61 @@ End About
                 <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
                     <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
                         <div class="trainer-thumb">
-                            <img src="assets/images/instructor/1.jpg" alt="trainer">
+                            <img src="assets/images/team/1.png" alt="trainer">
 
                         </div>
                         <div class="trainer-content">
-                            <h3 class="title"><a href="#0">Mohammed Sakeer</a></h3>
+                            <h3 class="title"><a href="#0">Sensei Sameesh</a></h3>
+                            <span class="sub-title">Head Instructor</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
+                    <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
+                        <div class="trainer-thumb">
+                            <img src="assets/images/team/2.png" alt="trainer">
+
+                        </div>
+                        <div class="trainer-content">
+                            <h3 class="title"><a href="#0">Sensei Irshad</a></h3>
+                            <span class="sub-title">Senior Instructor</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
+                    <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
+                        <div class="trainer-thumb">
+                            <img src="assets/images/team/3.png" alt="trainer">
+
+                        </div>
+                        <div class="trainer-content">
+                            <h3 class="title"><a href="#0">Sensei Shifas</a></h3>
+                            <span class="sub-title">Instructor</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
+                    <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
+                        <div class="trainer-thumb">
+                            <img src="assets/images/team/6.png" alt="trainer">
+
+                        </div>
+                        <div class="trainer-content">
+                            <h3 class="title"><a href="#0">Sensei Nisar</a></h3>
+                            <span class="sub-title">Instructor </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
+                    <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
+                        <div class="trainer-thumb">
+                            <img src="assets/images/team/7.png" alt="trainer">
+
+                        </div>
+                        <div class="trainer-content">
+                            <h3 class="title"><a href="#0">Sensei shaji</a></h3>
                             <span class="sub-title">Instructor</span>
                         </div>
                     </div>
@@ -416,11 +473,23 @@ End About
                 <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
                     <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
                         <div class="trainer-thumb">
-                            <img src="assets/images/instructor/2.jpg" alt="trainer">
+                            <img src="assets/images/team/8.png" alt="trainer">
 
                         </div>
                         <div class="trainer-content">
-                            <h3 class="title"><a href="#0">Irshad</a></h3>
+                            <h3 class="title"><a href="#0">Sensei Sakeer</a></h3>
+                            <span class="sub-title">Instructor </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
+                    <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
+                        <div class="trainer-thumb">
+                            <img src="assets/images/team/4.png" alt="trainer">
+
+                        </div>
+                        <div class="trainer-content">
+                            <h3 class="title"><a href="#0">name</a></h3>
                             <span class="sub-title">Instructor</span>
                         </div>
                     </div>
@@ -428,48 +497,12 @@ End About
                 <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
                     <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
                         <div class="trainer-thumb">
-                            <img src="assets/images/instructor/3.jpg" alt="trainer">
+                            <img src="assets/images/team/5.png" alt="trainer">
 
                         </div>
                         <div class="trainer-content">
-                            <h3 class="title"><a href="#0">Christian Jay Pajo</a></h3>
+                            <h3 class="title"><a href="#0">Sembai Noushad</a></h3>
                             <span class="sub-title">Instructor</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
-                    <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
-                        <div class="trainer-thumb">
-                            <img src="assets/images/instructor/4.jpg" alt="trainer">
-
-                        </div>
-                        <div class="trainer-content">
-                            <h3 class="title"><a href="#0">Jithin</a></h3>
-                            <span class="sub-title">Instructor</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
-                    <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
-                        <div class="trainer-thumb">
-                            <img src="assets/images/instructor/5.jpg" alt="trainer">
-
-                        </div>
-                        <div class="trainer-content">
-                            <h3 class="title"><a href="#0">Sameesh</a></h3>
-                            <span class="sub-title">Instructor</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
-                    <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
-                        <div class="trainer-thumb">
-                            <img src="assets/images/instructor/6.jpg" alt="trainer">
-
-                        </div>
-                        <div class="trainer-content">
-                            <h3 class="title"><a href="#0">Jeseela</a></h3>
-                            <span class="sub-title">Supervisor </span>
                         </div>
                     </div>
                 </div>
