--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AKC Karate Group of Martial Arts - Empowering Excellence since 2013. Join us for top-tier traditional and modernized Shotokan Karate training in the UAE.">
-    <meta name="keywords" content="Karate Group, Martial Arts, Shotokan Karate, Chief Instructor, Black Belt, Empowerment, Excellence, Discipline, Coordination, Focus, Self-Esteem, Leadership, Self-Defense, UAE, World Shotokan Karate Federation, UAE Karate Federation, Fitness Goals, Professional Instructors, National Competitions, International Competitions">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="AKC Karate Group of Martial Arts - Empowering Excellence since 2013. Join us for top-tier traditional and modernized Shotokan Karate training in the UAE.">
+    <meta name="keywords"
+        content="Karate Group, Martial Arts, Shotokan Karate, Chief Instructor, Black Belt, Empowerment, Excellence, Discipline, Coordination, Focus, Self-Esteem, Leadership, Self-Defense, UAE, World Shotokan Karate Federation, UAE Karate Federation, Fitness Goals, Professional Instructors, National Competitions, International Competitions">
     <meta name="author" content="AKC Karate Group">
     <title>AKC Karate Group of Martial Arts - Empowering Excellence since 2013</title>
 
@@ -73,7 +75,7 @@
                                         <a href="#0">SHEDULE</a>
 
                                     </li> -->
-                                      <li class="d-block d-lg-none">
+                                    <li class="d-block d-lg-none">
                                         <a href="register.html">REGISTER</a>
 
                                     </li>
@@ -575,48 +577,49 @@
                 <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
                     <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
                         <div class="trainer-thumb">
-                            <img src="assets/images/instructor/1.jpg" alt="trainer">
+                            <img src="assets/images/team/1.png" alt="trainer">
 
                         </div>
                         <div class="trainer-content">
-                            <h3 class="title"><a href="#0">Mohammed Sakeer</a></h3>
-                            <span class="sub-title">Instructor</span>
+                            <h3 class="title"><a href="#0">Sensei Sameesh</a></h3>
+                            <span class="sub-title">Head Instructor</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
                     <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
                         <div class="trainer-thumb">
-                            <img src="assets/images/instructor/2.jpg" alt="trainer">
+                            <img src="assets/images/team/2.png" alt="trainer">
 
                         </div>
                         <div class="trainer-content">
-                            <h3 class="title"><a href="#0">Irshad</a></h3>
-                            <span class="sub-title">Instructor</span>
+                            <h3 class="title"><a href="#0">Sensei Irshad</a></h3>
+                            <span class="sub-title">Senior Instructor</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
                     <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
                         <div class="trainer-thumb">
-                            <img src="assets/images/instructor/3.jpg" alt="trainer">
+                            <img src="assets/images/team/3.png" alt="trainer">
 
                         </div>
                         <div class="trainer-content">
-                            <h3 class="title"><a href="#0">Christian Jay Pajo</a></h3>
+                            <h3 class="title"><a href="#0">Sensei Shifas</a></h3>
                             <span class="sub-title">Instructor</span>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-xs-6 mb-30">
                     <div class="trainer-item" data-aos="zoom-in" data-aos-duration="1200">
                         <div class="trainer-thumb">
-                            <img src="assets/images/instructor/4.jpg" alt="trainer">
+                            <img src="assets/images/team/6.png" alt="trainer">
 
                         </div>
                         <div class="trainer-content">
-                            <h3 class="title"><a href="#0">Jithin</a></h3>
-                            <span class="sub-title">Instructor</span>
+                            <h3 class="title"><a href="#0">Sensei Nisar</a></h3>
+                            <span class="sub-title">Instructor </span>
                         </div>
                     </div>
                 </div>
