--- a/about.html
+++ b/about.html
@@ -489,7 +489,7 @@ End About
 
                         </div>
                         <div class="trainer-content">
-                            <h3 class="title"><a href="#0">name</a></h3>
+                            <h3 class="title"><a href="#0">Sensei Abhishek</a></h3>
                             <span class="sub-title">Instructor</span>
                         </div>
                     </div>
