--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AKC Karate Group of Martial Arts - Empowering Excellence since 2013. Join us for top-tier traditional and modernized Shotokan Karate training in the UAE.">
-    <meta name="keywords" content="Karate Group, Martial Arts, Shotokan Karate, Chief Instructor, Black Belt, Empowerment, Excellence, Discipline, Coordination, Focus, Self-Esteem, Leadership, Self-Defense, UAE, World Shotokan Karate Federation, UAE Karate Federation, Fitness Goals, Professional Instructors, National Competitions, International Competitions">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="AKC Karate Group of Martial Arts - Empowering Excellence since 2013. Join us for top-tier traditional and modernized Shotokan Karate training in the UAE.">
+    <meta name="keywords"
+        content="Karate Group, Martial Arts, Shotokan Karate, Chief Instructor, Black Belt, Empowerment, Excellence, Discipline, Coordination, Focus, Self-Esteem, Leadership, Self-Defense, UAE, World Shotokan Karate Federation, UAE Karate Federation, Fitness Goals, Professional Instructors, National Competitions, International Competitions">
     <meta name="author" content="AKC Karate Group">
     <title>AKC Karate Group of Martial Arts - Empowering Excellence since 2013</title>
 
@@ -156,13 +158,11 @@
                 <div class="col-md-4">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-30">
                         <div class="contact-item">
-
                             <div class="contact-content">
-                                <h4 class="title">ADDRESS - Abu Dhabi</h4>
+                                <h4 class="title">ADDRESS</h4>
                                 <p>P.O. Box 9462 Electra street Behind Honda showroom Building no 5364 Office .
                                     Mezzanine M-1, Abu Dhabi <br> <a
-                                        href="https://www.google.com/maps/@23.7745978,90.4219535,15z"
-                                        target="_blank">view
+                                        href="https://maps.google.com/?q=24.490820,54.372726" target="_blank">view
                                         map</a> </p>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
 
                             <div class="contact-content">
                                 <h4 class="title">TELEPHONE NUMBER</h4>
-                                <p>0508928567 <br> <a href="tel:0508928567">call now</a> </p>
+                                <p>0589532563 <br> 050 8928567(whatsapp) <br> <a href="tel:0589532563">call now</a> </p>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,118 @@
                     <div class="col-xl-12 h-100">
                         <div class="map-area h-100">
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29050.050682959714!2d54.37322173260885!3d24.476573704430272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDI5JzI3LjUiTiA1NMKwMjInMjEuNiJF!5e0!3m2!1sen!2sin!4v1556640010991!5m2!1sen!2sin"
+                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3630.845197514941!2d54.370151075359196!3d24.49081997817237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDI5JzI3LjAiTiA1NMKwMjInMjEuOCJF!5e0!3m2!1sen!2sin!4v1692584051491!5m2!1sen!2sin"
+                                style="height: 100%;border:0;" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    End Contact-item
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Start Contact-item
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+    <section class="contact-item-section ptb-120">
+        <div class="container">
+            <h4 class="title mb-30 title-contact">Asian Karate club - Abudhabi <span></span></h4>
+            <div class="row justify-content-center mb-30-none">
+                <div class="col-md-4">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-30">
+                        <div class="contact-item">
+                            <div class="contact-content">
+                                <h4 class="title">ADDRESS</h4>
+                                <p>Building no-B1, Behind mazyad mall, Mohammed bin zayed city, Abudhabi, UAE
+                                    <br> <a href="https://maps.google.com/?q=24.371571,54.537792" target="_blank">view
+                                        map</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-30">
+                        <div class="contact-item">
+
+                            <div class="contact-content">
+                                <h4 class="title">TELEPHONE NUMBER</h4>
+                                <p> 0559793589 <br> 050 8928567 (Whatsapp) <br> <a href="tel:0559793589">call now</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <div class="contact-item">
+
+                            <div class="contact-content">
+                                <h4 class="title">SEND MAIL</h4>
+                                <p>info@akc.com <br> <a href="mailto:info@akc.com">send now</a> </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-8">
+                    <div class="col-xl-12 h-100">
+                        <div class="map-area h-100">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3634.2797163152045!2d54.53521707535541!3d24.371570978251548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDIyJzE3LjciTiA1NMKwMzInMTYuMSJF!5e0!3m2!1sen!2sin!4v1692583638285!5m2!1sen!2sin"
+                                style="height: 100%;border:0;" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    End Contact-item
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Start Contact-item
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+    <section class="contact-item-section ptb-120">
+        <div class="container">
+            <h4 class="title mb-30 title-contact">Asian Karate club - Abudhabi <span></span></h4>
+            <div class="row justify-content-center mb-30-none">
+                <div class="col-md-4">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-30">
+                        <div class="contact-item">
+                            <div class="contact-content">
+                                <h4 class="title">ADDRESS</h4>
+                                <p>Building no-D1, Behind mazyad mall, Mohammed bin zayed city, Abudhabi, UAE
+                                    <br> <a href="https://maps.google.com/?q=24.370373,54.538227" target="_blank">view
+                                        map</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-30">
+                        <div class="contact-item">
+
+                            <div class="contact-content">
+                                <h4 class="title">TELEPHONE NUMBER</h4>
+                                <p> 0559793589 <br> 050 8928567 (Whatsapp) <br> <a href="tel:0559793589">call now</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <div class="contact-item">
+
+                            <div class="contact-content">
+                                <h4 class="title">SEND MAIL</h4>
+                                <p>info@akc.com <br> <a href="mailto:info@akc.com">send now</a> </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="col-xl-12 h-100">
+                        <div class="map-area h-100">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3634.3141403506584!2d54.535652075355266!3d24.370372978252423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDIyJzEzLjMiTiA1NMKwMzInMTcuNiJF!5e0!3m2!1sen!2sin!4v1692584184087!5m2!1sen!2sin"
                                 style="height: 100%;border:0;" allowfullscreen></iframe>
                         </div>
                     </div>
@@ -216,21 +327,19 @@
 
                             <div class="contact-content">
                                 <h4 class="title">ADDRESS - Musaffah Shabia 12</h4>
-                                <p>Muhamed Bin Zayed City, P.O. Box 9462, Near Al Bashair Schools Bulding #P/634 or Plot
-                                    No.C245 Fffice, Mezzanine M-4
-                                    Mezzanine M-1, Abu Dhabi <br> <a
-                                        href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3635.7686925503795!2d54.533310914992185!3d24.31970208431185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDE5JzEwLjkiTiA1NMKwMzInMDcuOCJF!5e0!3m2!1sen!2sin!4v1556640079275!5m2!1sen!2sin"
-                                        target="_blank">view
+                                <p>Bldg.No.C 245,Mezzanine-4, Shabiya ME-12,
+                                    Near Al Bashahir School and Model school
+                                    Musaffah,Abu Dhabi,U.A.E <br> <a
+                                        href=" https://maps.google.com/?q=24.319820,54.535542" target="_blank">view
                                         map</a> </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-30">
                         <div class="contact-item">
-
                             <div class="contact-content">
                                 <h4 class="title">TELEPHONE NUMBER</h4>
-                                <p>025589237 <br> <a href="tel:025589237">call now</a> </p>
+                                <p>025589237 <br> 0508928567 <br> <a href="tel:025589237">call now</a> </p>
                             </div>
                         </div>
                     </div>
@@ -238,8 +347,9 @@
                         <div class="contact-item">
 
                             <div class="contact-content">
-                                <h4 class="title">SEND MAIL</h4>
-                                <p>info@akc.com <br> <a href="mailto:info@akc.com">send now</a> </p>
+                                <h4 class="title">Visit Website</h4>
+                                <p>akckarateclub.com <br> <a href="http://akckarateclub.com/" target="_blank">visit</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -249,7 +359,7 @@
                     <div class="col-xl-12 h-100">
                         <div class="map-area h-100">
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3635.7686925503795!2d54.533310914992185!3d24.31970208431185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDE5JzEwLjkiTiA1NMKwMzInMDcuOCJF!5e0!3m2!1sen!2sin!4v1556640079275!5m2!1sen!2sin"
+                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3635.7653116009374!2d54.532967075353774!3d24.31981997828621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDE5JzExLjQiTiA1NMKwMzInMDguMCJF!5e0!3m2!1sen!2sin!4v1692584386093!5m2!1sen!2sin"
                                 style="height: 100%;border:0;" allowfullscreen></iframe>
                         </div>
                     </div>
@@ -274,10 +384,9 @@
 
                             <div class="contact-content">
                                 <h4 class="title">ADDRESS - Musaffah Shabia 9 </h4>
-                                <p>Land Mark:Saravana Bhavan Restaurant Building. Buld# P/1176 plot No C80, Mezzanine
-                                    2<br> <a
-                                        href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d908.7710044973815!2d54.535830588145494!3d24.343565799013934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5e475963838887%3A0x536c0e56a159a87!2s14+Musari+St+-+Abu+Dhabi+-+United+Arab+Emirates!5e0!3m2!1sen!2sin!4v1563974516786!5m2!1sen!2sin"
-                                        target="_blank">view
+                                <p>Bldg.No.C80,Mezzanine-2, Shabiya ME-9,
+                                    Sharavana Bhavan Restaurant Buld, Behind Gravity Hotel <br> <a
+                                        href="https://maps.google.com/?q=24.343798,54.536331" target="_blank">view
                                         map</a> </p>
                             </div>
                         </div>
@@ -287,7 +396,7 @@
 
                             <div class="contact-content">
                                 <h4 class="title">TELEPHONE NUMBER</h4>
-                                <p>025589237 <br> <a href="tel:025589237">call now</a> </p>
+                                <p>025620011 <br> 0551971956 <br> <a href="tel:025620011">call now</a> </p>
                             </div>
                         </div>
                     </div>
@@ -295,8 +404,9 @@
                         <div class="contact-item">
 
                             <div class="contact-content">
-                                <h4 class="title">SEND MAIL</h4>
-                                <p>info@akc.com <br> <a href="mailto:info@akc.com">send now</a> </p>
+                                <h4 class="title">Visit Website</h4>
+                                <p>akckarateclub.com <br> <a href="http://akckarateclub.com/" target="_blank">visit</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -306,7 +416,7 @@
                     <div class="col-xl-12 h-100">
                         <div class="map-area h-100">
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3635.7686925503795!2d54.533310914992185!3d24.31970208431185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDE5JzEwLjkiTiA1NMKwMzInMDcuOCJF!5e0!3m2!1sen!2sin!4v1556640079275!5m2!1sen!2sin"
+                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3635.077353429806!2d54.53375607535449!3d24.34379797827014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDIwJzM3LjciTiA1NMKwMzInMTAuOCJF!5e0!3m2!1sen!2sin!4v1692584505595!5m2!1sen!2sin"
                                 style="height: 100%;border:0;" allowfullscreen></iframe>
                         </div>
                     </div>
