--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="container-fluid">
             <div class="service-area">
                 <div class="service-element">
-                    <img src="assets/images/element/element-24.png" alt="element">
+                    <img src="assets/images/element/element-24.png" alt="element" style="width: 100%;">
                 </div>
                 <div class="row justify-content-center mb-10-none">
                     <div class="col-xl-12">
