--- a/about.html
+++ b/about.html
@@ -396,7 +396,7 @@ End About
     Start Trainer
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
     <section class="trainer-section trainer-section--style ptb-120 bg-overlay-black bg_img"
-        data-background="assets/images/bg/bg-2.png">
+        data-background="https://www.asiankarateclub.com/assets/images/bg/bg-2.png">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8 text-center">
