--- a/register.html
+++ b/register.html
@@ -346,7 +346,7 @@
                         <ul class="footer-list">
                             <li>P.O. Box 9462 Electra street Behind Honda showroom
                                 Building no 5364 Office . Mezzanine M-1, Abu Dhabi</li>
-                            <li><span>Email :</span> info@akc.com</li>
+                            <li><span>Email :</span> info@asiankarateclub.com</li>
                             <li><span>Telephone :</span> +97 15089 28567</li>
                         </ul>
                     </div>
