--- a/contact.html
+++ b/contact.html
@@ -181,7 +181,7 @@
 
                             <div class="contact-content">
                                 <h4 class="title">SEND MAIL</h4>
-                                <p>info@akc.com <br> <a href="mailto:info@akc.com">send now</a> </p>
+                                <p>info@asiankarateclub.com <br> <a href="mailto:info@asiankarateclub.com">send now</a> </p>
                             </div>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
 
                             <div class="contact-content">
                                 <h4 class="title">SEND MAIL</h4>
-                                <p>info@akc.com <br> <a href="mailto:info@akc.com">send now</a> </p>
+                                <p>info@asiankarateclub.com <br> <a href="mailto:info@asiankarateclub.com">send now</a> </p>
                             </div>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
 
                             <div class="contact-content">
                                 <h4 class="title">SEND MAIL</h4>
-                                <p>info@akc.com <br> <a href="mailto:info@akc.com">send now</a> </p>
+                                <p>info@asiankarateclub.com <br> <a href="mailto:info@asiankarateclub.com">send now</a> </p>
                             </div>
                         </div>
                     </div>
@@ -528,7 +528,7 @@
                         <ul class="footer-list">
                             <li>P.O. Box 9462 Electra street Behind Honda showroom
                                 Building no 5364 Office . Mezzanine M-1, Abu Dhabi</li>
-                            <li><span>Email :</span> info@akc.com</li>
+                            <li><span>Email :</span> info@asiankarateclub.com</li>
                             <li><span>Telephone :</span> +97 15089 28567</li>
                         </ul>
                     </div>
